--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "html-webpack-plugin": "^4.2.0",
     "prop-types": "^15.7.2",
     "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "styled-components": "^5.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
